# tuing-sc

./: .gitignore  pyproject.toml
schedule/schedule/: settings.py  urls.py
schedule/ts_app/: admin.py  models.py  serializers.py  urls.py  views.py
schedule/ts_app/migrations/: 0001_initial.py  0002_alter_lessonschedule_day.py
schedule/ts_app/statics/: script.js  styles.css
schedule/ts_app/templates/: index.html  index11.html  index2.html
